# hello_django2

./: README.md  pyproject.toml
hello_app/: views.py
hello_django/: settings.py
templates/: index.html
